# QuizHazard

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
database/: models.py  requests.py
handlers/: base_handlers.py  quiz_builder.py  quiz_selector.py
keyboards/: base_kb.py
states/: base_states.py
